Добавлен формальный вывод формулы Шеннона из формулы Хартли

--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -240,8 +240,8 @@
     $\{1,4\}$, $\{2,5\}$ и $\{3\}$.
 \end{example}
 
-Пусть $B\subset A$~--- это некоторое \emph{утверждение} о мирах. $B$ \emph{истино} в мире $x$, если $x\in B$.
-В противном случае $B$ \emph{ложно} в $x$. В мире $x$ мы \emph{знаем, что $B$ истино}, если $y \in B$ для всех 
+Пусть $B\subset A$~--- это некоторое \emph{утверждение} о мирах. $B$ \emph{истинно} в мире $x$, если $x\in B$.
+В противном случае $B$ \emph{ложно} в $x$. В мире $x$ мы \emph{знаем, что $B$ истинно}, если $y \in B$ для всех 
 $y\sim x$.
 
 \begin{example}
@@ -324,6 +324,38 @@ H(\alpha) = \sum_{i=1}^k p_i\cdot\log\frac1p_i.
 \]
 (По непрерывности доопределим \(0\cdot \log\frac10 = 0\).)
 \end{definition}
+
+Можно вывести это соотношение из определения Хартли более формально. 
+Пусть $W_n$~--- это множество всех слов длины $n$ состоящих из букв $\{\seqn{a}{k}\}$,
+где каждая буква $a_i$ встречается ровно $n_i = p_i\cdot n$ раз
+(будем считать, что вероятности $p_i$ рациональны, и что множество 
+$W_n$ определено только тогда, когда все $n_i$ целые).
+Информация по Хартли в $W_n$ 
+\[
+    \chi(W_n) = \log |W_n| = \log \frac{n!}{n_1!n_2!\dotsb n_k!}.
+\]
+Это выражение можно оценить при помощи формулы Стирлинга.
+\[
+    \begin{aligned}
+    \chi(W_n)&\ =  \log \frac{\poly(n)\cdot (n/e)^n}
+    {\poly(n)\cdot(n_1/e)^{n_1}\cdot(n_1/e)^{n_2}\dotsm(n_k/e)^{n_k}} =\\
+    &\ = \log \left(\left(\frac{n}{n_1}\right)^{n_1}\cdot
+                    \left(\frac{n}{n_2}\right)^{n_2}\dotsm
+                    \left(\frac{n}{n_k}\right)^{n_k}\right) + O(\log n) =\\
+    &\ = \log \left(\left(\frac{1}{p_1}\right)^{p_1\cdot n}\cdot
+                    \left(\frac{1}{p_2}\right)^{p_2\cdot n}\dotsm
+                    \left(\frac{1}{p_k}\right)^{p_k\cdot n}\right) + O(\log n) =\\
+    &\ = n \cdot \sum_{i=1}^k p_i \cdot \frac{1}{p_i} + O(\log n).
+    \end{aligned}
+\]
+В среднем на один символ приходится $\chi(W_n)/n$ битов информации.
+В пределе получаем
+\[
+    \lim_{n\to \infty}\frac{\chi(W_n)}{n} = \sum_{i=1}^k p_i \cdot \frac{1}{p_i} = H(\alpha)
+\]
+(предел нужно брать по бесконечной подпоследовательности натуральных чисел $n$ таких,
+для которых все $\{n_i\}$~--- целые).
+ 
 
 \begin{lemma}\label{lm:entropy-properties}
 Для энтропии Шеннона выполняются следующие соотношения.
