--- a/notes/lecture01.tex
+++ b/notes/lecture01.tex
@@ -139,8 +139,8 @@
     $\{1,4\}$, $\{2,5\}$ и $\{3\}$.
 \end{example}
 
-Пусть $B\subset A$~--- это некоторое \emph{утверждение} о мирах. $B$ \emph{истино} в мире $x$, если $x\in B$.
-В противном случае $B$ \emph{ложно} в $x$. В мире $x$ мы \emph{знаем, что $B$ истино}, если $y \in B$ для всех 
+Пусть $B\subset A$~--- это некоторое \emph{утверждение} о мирах. $B$ \emph{истинно} в мире $x$, если $x\in B$.
+В противном случае $B$ \emph{ложно} в $x$. В мире $x$ мы \emph{знаем, что $B$ истинно}, если $y \in B$ для всех 
 $y\sim x$.
 
 \begin{example}
