Навёл порядок с Макмиланом и Крафтом

--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -575,16 +575,16 @@ H(\alpha) - \log k
     кодовое слово не является префиксом другого кодового слова.
 \end{definition}
 
-\begin{theorem}[Неравенство Макмилана]\label{thm:mcmill}
+\begin{theorem}[Неравенство Крафта-Макмилана]\label{thm:mcmill}
     Для любого однозначно декодируемого кода со множеством кодовых слов 
     \(\{\seqn{c}{n}\}\) выполняется следующее неравенство:
     \[
         \sum_{i=1}^{n} 2^{-|c_i|} \le 1.
     \]
 \end{theorem}
-\begin{theorem}[Неравенство Крафта]
-    Для префиксных кодов верно неравенство Макмиллана.
-\end{theorem}
+\begin{lemma}
+    Для префиксных кодов верно неравенство Крафта-Макмилана.
+\end{lemma}
 \begin{proof}
     Рассмотрим дерево префиксного кода и посчитаем суммарную меру поддеревьев,
     которые соответствуют кодовым словам.
@@ -593,7 +593,7 @@ H(\alpha) - \log k
 \begin{statement}
     Для префиксных кодов верно и обратное: если есть набор целых чисел
     \(\{\seqn{\ell}{n}\}\),
-    удовлетворяющие неравенству Крафта
+    удовлетворяющие неравенству Крафта-Макмилана
     \[
         \sum_{i=1}^{n} 2^{-\ell_i} \le 1,
     \]
@@ -634,7 +634,7 @@ H(\alpha) - \log k
         L\cdot\max|c_i| = O(L).
     \end{equation}
 
-    Предположим теперь, что неравенство Крафта не выполняется, т.e.
+    Предположим теперь, что неравенство Крафта-Макмилана не выполняется, т.e.
     \[
         q = \sum_{i=1}^n p_i(1/2,1/2) = \sum_{i=1}^n 2^{-|c_i|} > 1.
     \]
@@ -681,7 +681,7 @@ H(\alpha) - \log k
 \begin{proof}
     Покажем, что найдутся \(\{\seqn{c}{n}\}\) такие, что $|c_i| =
     \bigl\lceil\log\frac1p_i \bigr\rceil$. Код существует, т.к. для длин $c_i$ выполняется
-    неравенство Крафта:
+    неравенство Крафта-Макмилана:
     \[
         \sum_{i=1}^n 2^{-|c_i|} =  
         \sum_{i=1}^n 2^{-\lceil\log\frac1p_i \rceil} \le  
@@ -2313,7 +2313,7 @@ A_n = \{w_1\#w_2\#\dotsb\#w_n\#w_n\#\dotsb\#w_1\mid w_i\in\binstr\},
 \begin{itemize}
     \item $2\log K(x)$ возникает из-за преобразования строки $p$ 
         в беспрефиксную $p' = \overline{\overline{|p|}}01p$.
-    \item Аналогично неравенству Крафта для префиксных кодов.
+    \item Аналогично неравенству Крафта-Макмилана для префиксных кодов.
 \end{itemize}
 \end{proof}
 
