Исправлено описание арифметического кодирования

--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -778,11 +778,11 @@ H(\alpha) - \log k
     стандартному интервалу $[0.v0_2, 0.v1_2)$ код $v$.
 
     Для первой буквы кода на отрезке [0,1] мы отложим слева направо непересекающиеся интервалы длины
-    $p_i$. Для второй буквы кода мы внутри каждого интервала $p_i$ повторим эту
-    операции, но длины интервалом будут уже масштабированы с коэффициентом
-    $p_i$. Повторим эту операцию $k$ раз. Теперь каждому из получившихся
-    интервалов в качестве его кода сопоставим код наибольшего 
-    стандартного интервала, который полностью содержится внутри него.
+    $p_i$. Пусть первая буква блока~--- это $a_{i_1}$, тогда для второй буквы кода мы внутри интервала
+    соответствующего $p_{i_j}$ повторим эту операцию (отложим непересекающиеся интервалы), но длины интервалом 
+    будут уже масштабированы с коэффициентом
+    $p_i$. Повторим эту операцию $k$ раз. Получившемуся интервалу в качестве его кода 
+    сопоставим код наибольшего стандартного интервала, который полностью содержится внутри него.
 \end{definition}
 \begin{statement}
     В интервале $[a,b)$ всегда найдётся стандартный интервал длины $2^{-k}$, где
