Конспекты к лекциям + мелкие баги

--- a/notes/lecture01.tex
+++ b/notes/lecture01.tex
@@ -25,7 +25,7 @@
     мы узнали \(\log 120 - \log 90 = \log(4/3)\) битов.
 \end{example}
 
-Пусть \(A\subset\binstr\times\binstr\). Обозначим через \(\pi_1(A)\) и \(\pi_2(A)\) проекции множества \(A\) на первую и вторую координату соответственно, а \(\chi_1(A) = \log|\pi_1(A)|\) и \(\chi_2(A) = \log|\pi_2(A)|\)~--- их сложность по Хартли.
+Пусть \(A\subset\bitstr\times\bitstr\). Обозначим через \(\pi_1(A)\) и \(\pi_2(A)\) проекции множества \(A\) на первую и вторую координату соответственно, а \(\chi_1(A) = \log|\pi_1(A)|\) и \(\chi_2(A) = \log|\pi_2(A)|\)~--- их сложность по Хартли.
 
 \begin{theorem} 
 \(\chi(A) \le \chi_1(A) + \chi_2(A)\).
@@ -42,7 +42,7 @@
 \end{theorem}
 
 \begin{theorem}\label{thm:volume}
-Для \(A\subset\binstr\times\binstr\times\binstr\)
+Для \(A\subset\bitstr\times\bitstr\times\bitstr\)
 \[2\cdot\chi(A) \le \chi_{12}(A) + \chi_{13}(A) + \chi_{23}(A).\]
 \end{theorem}
 \begin{corollary}
