--- a/notes/infocourse.sty
+++ b/notes/infocourse.sty
@@ -31,17 +31,21 @@
 \usepackage{tikz}
 \usetikzlibrary{positioning}
 
-\newcommand{\binstr}{\{0,1\}^*}
+\newcommand{\bits}{\{0,1\}}
+\newcommand{\bitstr}{\bits^*}
 \newcommand{\sshalf}{{\textstyle\frac12}}
 \newcommand{\seqn}[2]{{#1}_1,{#1}_2,\dotsc,{#1}_{#2}}
 \newcommand{\seqin}[3]{{#1}_{{#2}_1},{#1}_{{#2}_2},\dotsc,{#1}_{{#2}_{#3}}}
+\newcommand{\IC}{\mathrm{IC}}
 \newcommand{\poly}{\mathrm{poly}}
+\newcommand{\Nat}{\mathbb{N}}
 
 \DeclareMathOperator{\dom}{dom}
+\DeclareMathOperator{\rank}{rank}
 \DeclareMathOperator{\rng}{rng}
 
 \theoremstyle{definition}
-\newtheorem{definition}{Определение}
+\newtheorem{definition}{Определение}[section]
 
 \theoremstyle{plain}
 \newtheorem{theorem}{Теорема}[section]
