--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -2108,7 +2108,7 @@ Y)\times Z$}~--- нужно только дополнительно потреб
     \]
 \end{proof}
 
-\begin{theorem}
+\begin{theorem}[\cite{DMWW12}]
     Пусть $\Pi$ коммуникационный протокол. Для любого распределения $\mu$:
     \(
         \log L(\Pi) \ge \IC_\mu^{ext}(\Pi).
@@ -2861,6 +2861,30 @@ $t\le s + \log n + O(1)$.
     \sum_s (s + \log n)\cdot 2^{-s} = \sum_s 2^{-s}\cdot\log n + \sum_s \frac{s}{2^s}
     = \log n + O(1).
 \]
+
+\begin{thebibliography}{9}
+    \bibitem{veresch12} Н.К. Верещагин, Е.В. Щепин. \emph{Информация, кодирование, предсказание}, МЦНМО, 2012.
+
+    \bibitem{veresch17} Н.К. Верещагин. \emph{Коммуникационная сложность}, Computer Science клуб, 2017.
+        \url{http://compsciclub.ru/courses/communicationcomplexity/2017-spring/}
+
+    \bibitem{romaschcsclub} А.Е. Ромащенко. \emph{Введение в теорию информации,} Computer Science клуб, 2015. 
+        \url{http://compsciclub.ru/courses/informationtheory/2015-spring/}
+
+    \bibitem{romaschnotes} А.Е. Ромащенко. \emph{Краткий конспект лекций курса ``Введение в теорию информации'',} 2014. 
+        \url{http://www.mccme.ru/~anromash/courses/lecture-notes-it-2014.pdf}
+
+    \bibitem{kolmbook12} В.А. Успенский, Н.К. Верещагин, А.Шень. \emph{Введение в колмогоровскую сложность}. МЦНМО, 2012.
+
+    \bibitem{shen08} А. Шень. \emph{Алгоритмическая теория информации,} Computer Science клуб, 2008. 
+        \url{http://compsciclub.ru/courses/algo-information-theory/2008-autumn/}
+
+    \bibitem{DMWW12} D. Gavinsky, O. Meir, O. Weinstein, A. Wigderson. \emph{Toward better formula lower bounds: 
+    an information complexity approach to the KRW composition conjecture.} STOC 2014.
+
+    \bibitem{NK97} E. Nisan, N. Kushilevitz. \emph{Communication complexity}, 1997.
+
+\end{thebibliography}
 
 \end{document}
 % vim: set tw=120:
