Ещё о применении Колмогоровской сложности

--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -12,8 +12,15 @@
 %% CALCULATOR
 \usepackage{calc}
 %% STYLE
-\usepackage[raggedright,small]{titlesec}
 \usepackage[dotinlabels]{titletoc}
+\usepackage[small]{titlesec}
+%% TITLESEC BUG WORKAROUND %%
+\usepackage{etoolbox}
+\makeatletter
+\patchcmd{\ttlh@hang}{\parindent\z@}{\parindent\z@\leavevmode}{}{}
+\patchcmd{\ttlh@hang}{\noindent}{}{}{}
+\makeatother
+%% END %%
 \titlelabel{\thetitle.\quad}
 %% Puts "." instead of ":" in captions
 \usepackage{ccaption}
@@ -32,7 +39,7 @@
 }
 
 \usepackage{tikz}
-\usetikzlibrary{positioning}
+\usetikzlibrary{positioning,calc}
 
 \newcommand{\bits}{\{0,1\}}
 \newcommand{\bitstr}{\bits^*}
@@ -2802,7 +2809,143 @@ A_n = \{w_1\#w_2\#\dotsb\#w_n\#w_n\#\dotsb\#w_1\mid w_i\in\bitstr\},
     $(1+\varepsilon)\sqrt{\frac{2\log\log n}{n}}$.
 \end{remark}
 
-\subsection{Применение: алгоритм сложения битовых чисел}
+\section{Приложения Колмогоровской сложности}
+
+\subsection{Бесконечность множества простых чисел}
+\begin{theorem}
+    Простых чисел бесконечно много.
+\end{theorem}
+\begin{proof}
+    Докажем от обратного. Пусть простых числел всего $m$: $\seqn{p}{m}$. 
+    Тогда любое целое разлагается на степени этих простых:
+    \[
+        x = p_1^{k_1}\cdot p_2^{k_2}\cdot\dotsm\cdot p_m^{k_m},
+    \]
+    и тем самым определяется набором степеней $\seqn{k}{m}$. Каждое $k_i\le\log x$,
+    а значит записывается при помощи $O(\log \log x)$ битов. Число $m$ является 
+    абсолютной константой, поэтому любое $x$ задаётся при помощи $O(\log\log x)$ битов.
+    В то же время случайное существуют $n$ битовые числа $x$ сложности не менее $n$. 
+    Отсюда получаем противоречие: 
+    \[ n \le K(x) \le O(\log\log x) = O(\log n).\]
+\end{proof}
+
+
+
+\subsection{Перенос информации по ленте}
+Мы докажем, что для копирования слова длины $n$ на однолетночной машине Тьюринга
+необходимо $\Omega(n^2)$ шагов. Для этого давайте рассмотрим более общую задачу~—
+задачу о переносе информации по ленте. Пусть на ленте выделена некоторая ,,буферная``
+область ширины $b$.
+\begin{center}
+\begin{tikzpicture}
+    \node[minimum width=2cm,fill=gray!30] (l) at (0,0) {$L$};
+    \node[minimum width=2cm, right of=l, node distance=4cm, fill=gray!30] (r) {$R$};
+
+    \draw[draw] (l.south west) -- (r.south east); 
+    \draw[draw] (l.north west) -- (r.north east); 
+
+     \draw[draw] (r.north west) -- ($ (r.south west)+(0,-.6) $); 
+     \draw[draw] (l.north east) -- ($ (l.south east)+(0,-.6) $); 
+     
+     \draw[draw,<->] ($ (r.south west)+(0,-.3) $) -- ($ (l.south east)+(0,-.3) $); 
+   
+     \node at ($ (l.south east)+(1,-.6) $) {$b$};
+\end{tikzpicture}
+\end{center}
+Нас будет интересовать скорость переноса информации через ,,буферную зону`` слева направо,
+т.е. из области $L$ в область $R$. Пусть изначально область $R$ пуста. Какова может быть
+сложность строки $R$ через $t$ шагов после начала работы? Мы покажем, что сложность $R$
+не более $(t\log m)/b + O(\log t)$, где $m$~--- число состояний машины Тьюринга. Это
+можно объяснить из неформальных соображений: каждое состояние ,,несёт`` не более $\log m$
+битов информации, за один шаг информация переносится на одну клетку, т.е. всего за $t$
+шагов мы перенесём не более $t\log m$ бит информации. Нам же нужно перенести информацию
+на расстояние $b$, отсюда получаем $(t\log m) / b$.
+
+\begin{theorem}
+Пусть зафиксирована машина Тьюринга $m$ состояниями. Тогда существует такая константа $c$,
+что для любого $b$ и для любого вычисления с буферной зоной $b$ (вначале эта зона и лента
+справа от неё пусты, головка машины находится слева от зоны) сложность правой части ленты
+$R(t)$ после $t$ шагов вычисления не превосходит
+$$\frac{t\log m}{b} + 4\log t + c.$$
+\end{theorem}
+\begin{proof}
+    Проведём границу где-нибудь внутри буферной зоны, и при каждом пересечении головкой
+    машины Тьюринга границы слева направо будем записывать, в каком состоянии она её пересекла.
+    Будем называть такой протокол работы \emph{следом} машины. Заметим, что по следу можно
+    восстановить работу машины справа от границы~— действительно, поведение машины Тьюринга
+    справа от границы зависит только от того состояния, в котором машина пересекла границу
+    и от того, что уже к этому моменту записано на ленте справа от границы. 
+
+    Для того, чтобы восстановить $R(t)$ нам потребуется указать след $S$, количество шагов $t'\le t$, 
+    которое машина Тьюринга сделала справа от границы, а так же расстояние $b' < b$ от границы до $R$.
+    Получаем 
+    $$
+    K(R(t)) \le |\langle S, b', t'\rangle| + c 
+    \le |S|\cdot\log m + 2\log b + 2\log t + c 
+    \le |S|\cdot\log m + 4\log t + c. 
+    $$
+    Это неравенство верно для любого начального состояния и положения границы. Если для
+    данного $L$ мы выберем \emph{самый короткий} из следов для всех возможных положений границ, 
+    то его заведомо длина меньше $t/b$ (различных положений границы $b + 1$, на каждом шаге 
+    пересекается только одна из возможных границ, таким образом сумма длин следов не превосходит $t$).
+    Следовательно, наша оценка верна для $|S| < t/b$.
+\end{proof}
+
+Отсюда сразу же получается квадратичная нижняя оценка на копирование на однолетночной
+машине Тьюринга. Под копированием будем понимать следующий процесс: изначально на ленте 
+написано некоторое слово $x\in\bitstr$, а справа от него лента пуста. В конце работы
+машины Тьюринга на ленте должно быть написано $xx$.
+
+\begin{theorem}
+    Существует такая константа $\epsilon>0$, что для любого $n$ существует слово длины $n$,
+    копирование которого с помощью машины $M$ занимает не менее $\epsilon n^2$ шагов.
+\end{theorem}
+\begin{proof}
+    Для простоты будем предполагать, что $n$ чётно. Возьмём в качестве $x$ слово,
+    у которого вторая половина $u$ несжимаема (т.е. имеет сложность $\ge n/2$).
+    Применим теорему о скорости переноса информации, считая буферной зоной
+    участок длины $n/2$ справа от $x$.
+\begin{center}
+\begin{tikzpicture}[node distance=2cm]    
+    \node[minimum width=2cm,minimum height=.5cm,fill=gray!30] (a) at (0,0) {};
+    \node[minimum width=2cm,minimum height=.5cm,right of=a, fill=gray!30] (b) {$u$};
+    \node[minimum width=2cm,minimum height=.5cm,right of=b] (c)  {};
+    \node[minimum width=2cm,minimum height=.5cm,right of=c] (d)  {$u$};
+
+    \draw[draw] (a.south west) -- (d.south east); 
+    \draw[draw] (a.north west) -- (d.north east); 
+
+    \foreach \n in {a,d} {
+        \draw[draw] (\n.north east) -- (\n.south east); }
+
+    \foreach \n in {a,c,d} {
+        \draw[draw] (\n.north west) -- ($ (\n.south west)+(0,-.6) $); }
+
+    \draw[draw,<->] ($ (a.south west)+(0,-.3) $) -- ($ (b.south east)+(0,-.3) $); 
+    \draw[draw,<->] ($ (c.south west)+(0,-.3) $) -- ($ (c.south east)+(0,-.3) $); 
+
+    \node at ($ (a.north east)+(0,.3) $) {\small $x$};
+    \node at ($ (a.south east)+(0,-.6) $) {\small $n$};
+    \node at ($ (c.south)+(0,-.6) $) {\small $n/2$};
+\end{tikzpicture}
+\end{center}
+
+Пусть копирование заняло $t$ шагов, тогда сложность зоны $R$ не меньшь $n/2$.
+С другой стороны, по предыдущей теореме сложность $R$ не превосходит $(t\log m)/b + 4\log t + c$,
+где $b = n/2$. Получаем, что
+\[
+    \frac{n}{2} \le \frac{t\log m}{b} + 4\log t + c.
+\]
+Предположим, что $t < n^2$ (иначе нам нечего доказывать), а следовательно $4\log t <  8\log n$.
+Отсюда получаем, что
+\[
+    t\ge\frac{n^2}{4\log m} - O(n\log n).
+\]
+От второго слагаемого можно избавиться, если взять $\epsilon$ немного меньше $1/(4\log m)$. 
+\end{proof}
+
+
+\subsection{Алгоритм сложения битовых чисел}
 Пусть $\bar x=\overline{x_{n-1}\dotso x_0}$ и $\bar y = \overline{y_{n-1}\dotso y_0}$~---
 это два $n$-битных числа.  Предложим алгоритм сложения $\bar x$ и $\bar y$, который делает
 $\log n$ операций в среднем (предполагается, что побитовые операции с
