--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -2816,7 +2816,7 @@ A_n = \{w_1\#w_2\#\dotsb\#w_n\#w_n\#\dotsb\#w_1\mid w_i\in\bitstr\},
     Простых чисел бесконечно много.
 \end{theorem}
 \begin{proof}
-    Докажем от обратного. Пусть простых числел всего $m$: $\seqn{p}{m}$. 
+    Докажем от обратного. Пусть простых чисел всего $m$: $\seqn{p}{m}$. 
     Тогда любое целое разлагается на степени этих простых:
     \[
         x = p_1^{k_1}\cdot p_2^{k_2}\cdot\dotsm\cdot p_m^{k_m},
@@ -2832,7 +2832,7 @@ A_n = \{w_1\#w_2\#\dotsb\#w_n\#w_n\#\dotsb\#w_1\mid w_i\in\bitstr\},
 
 
 \subsection{Перенос информации по ленте}
-Мы докажем, что для копирования слова длины $n$ на однолетночной машине Тьюринга
+Мы докажем, что для копирования слова длины $n$ на одноленточной машине Тьюринга
 необходимо $\Omega(n^2)$ шагов. Для этого давайте рассмотрим более общую задачу~—
 задачу о переносе информации по ленте. Пусть на ленте выделена некоторая ,,буферная``
 область ширины $b$.
@@ -2944,7 +2944,6 @@ $$\frac{t\log m}{b} + 4\log t + c.$$
 От второго слагаемого можно избавиться, если взять $\epsilon$ немного меньше $1/(4\log m)$. 
 \end{proof}
 
-
 \subsection{Алгоритм сложения битовых чисел}
 Пусть $\bar x=\overline{x_{n-1}\dotso x_0}$ и $\bar y = \overline{y_{n-1}\dotso y_0}$~---
 это два $n$-битных числа.  Предложим алгоритм сложения $\bar x$ и $\bar y$, который делает
@@ -2986,25 +2985,25 @@ $n$-битными числами выполняются за O(1)).
 
 Так как у $\bar x$ и $\bar y$ есть общий блок битов длины $t$, то
 \[
-    K(\bar x\mid\bar y)\le (n-t-1) + \underbrace{\log n}_{j} + O(1).
+    K(\bar x\mid\bar y)\le (n-t-1) + \underbrace{\log n}_{t} + \underbrace{\log n}_{j} + O(1).
 \]
-Отсюда $t\le n - K(\bar x\mid\bar y) + \log n + O(1).$ Среднее количество
+Отсюда $t\le n - K(\bar x\mid\bar y) + 2\log n + O(1).$ Среднее количество
 итераций в алгоритме можно оценить как
 \[
     \sum_t t\cdot [\text{доля пар $(x,y)$ с общим блоком длины $t$}]
 \]
 
 Введём обозначение
-$K(\bar x\mid \bar y)\le n - \underbrace{t + 1 + \log n + O(1)}_{s}$ и будем
-называть $s$ \emph{дефектом случайности}, т.е. $s = t - 1 - \log n + O(1)$ и
-$t\le s + \log n + O(1)$.
+$K(\bar x\mid \bar y)\le n - \underbrace{t + 1 + 2\log n + O(1)}_{s}$ и будем
+называть $s$ \emph{дефектом случайности}, т.е. $s = t - 1 - 2\log n + O(1)$ и
+$t\le s + 2\log n + O(1)$.
 
 Доля пар $(\bar x, \bar y)$ таких, что $K(\bar x\mid \bar y) = n - s$
 примерно равна $p_s\approx 2^{-s}$. Таким образом среднее количество итераций в
 алгоритме не больше, чем
 \[
-    \sum_s (s + \log n)\cdot 2^{-s} = \sum_s 2^{-s}\cdot\log n + \sum_s \frac{s}{2^s}
-    = \log n + O(1).
+    \sum_s (s + 2\log n)\cdot 2^{-s} = 2\log n\sum_s 2^{-s}\cdot\log n + \sum_s \frac{s}{2^s}
+    = 2\log n + O(1).
 \]
 
 \begin{thebibliography}{9}
